style and content changes WIP

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
     <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and a selection of my readings and writings.">
     <meta name="keywords" content="engineer, security, cryptography, activism, poetry, speaker, change maker, paradigm shifter, consulting, hacking, programming, webdesign, pc repair, permaculture, making, art, make">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/layout.css">
-    <link rel="stylesheet" href="./css/typography.css">
-    <link rel="stylesheet" href="./css/utilities.css">
+    <link rel="stylesheet" href="./css/merged.css">
     <script defer="defer" src="./js/script.js"></script>
   </head>
   <body>
@@ -116,10 +114,31 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
       
       <div id="my-client-section"> <span class="subheader-text"><br><br>Recent Clients:<br><br></span>
         <div class="projects-container">
+          <div class="project-card"> <img loading="lazy" src="./assets/images/colorfulpsyche.png"
+              class="project-image">
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">Colorful Psyche</div>
+              <div class="body-text project-card-text">Website Design for artist multi-talented artist.</div>
+            </div>
+          </div>
+          <div class="project-card"> <img loading="lazy" src="./assets/images/manurosales.png"
+              class="project-image">
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">manurosales.com</div>
+              <div class="body-text project-card-text">Website Design for artist Manu Rosales.</div>
+            </div>
+          </div>
+          <div class="project-card"> <img loading="lazy" src="./assets/images/wandelbuendnis.png"
+              class="project-image">
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">Wandelbündnis</div>
+              <div class="body-text project-card-text">Developed a secure Python application to process sensitive organisational data, reducing manual data processing time *significantly* through automation and optimised workflows (custom API design). Provided technical consulting by translating high-level organisational requirements into an actionable work plan and modern tech stack, accelerating project execution. Designed and deployed a hardened Linux container for secure deployment and monitoring, improving system resilience and reducing attack surface.</div>
+            </div>
+          </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/menthormovement.png"
               class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Menthormovement</div>
+              <div class="subheader-text project-title">menthormovement.com</div>
               <div class="body-text project-card-text">IT and Web consulting for Menthormovement working closely with their team to rapidly deliver a fully customised e-commerce platform with bespoke frontend and backend tailored lovingly and precisely to the needs and wishes of the client.</div>
             </div>
           </div> 
