--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
               class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Colorful Psyche</div>
-              <div class="body-text project-card-text">Website Design for artist multi-talented artist.</div>
+              <div class="body-text project-card-text">Website Design for an artist</div>
             </div>
           </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/manurosales.png"
               class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">manurosales.com</div>
-              <div class="body-text project-card-text">Website Design for artist Manu Rosales.</div>
+              <div class="body-text project-card-text">Website Design for an artist.</div>
             </div>
           </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/wandelbuendnis.png"
