migrated site to new css

--- a/academia/mit.html
+++ b/academia/mit.html
@@ -18,9 +18,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
   <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
  
-  <link rel="stylesheet" href="../css/layout.css">
-  <link rel="stylesheet" href="../css/typography.css">
-  <link rel="stylesheet" href="../css/utilities.css">
+  <link rel="stylesheet" href="../css/merged.css">
 
   <script defer src="../js/script.js"></script>
 </head>
@@ -120,16 +118,16 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <!-- PROJECT HEADER -->
     <div id="project-header">
 
-      <div class="main-title">Nanode</div>
-      <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It is a low cost platform for creative development of web connected ideas. Languages: C</div>
-      <img loading="lazy" class="project-header-image" src="../assets/images/nanode.png">
+      <div class="main-title">MIT Civic Media Centre Application</div>
+      <div class="body-text">I applied for graduate studies at MIT's Civic Media Centre. My application made it to the final round (4 people from around 800 applications) but in the end they only took one candidate (hint: not me).</div>
+      <img loading="lazy" class="project-header-image" src="../assets/images/MIT.png">
       </div>
 
 
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
-          <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It connects to a range of wireless, wired and ethernet interfaces. It allows you to develop web based sensor and control systems - giving you web access to six analogue sensor lines and six digital I/O lines. It costs under £20 as an easy build it yourself kit. Nanode was designed with Hacking in mind. </div>
+          <div class="body-text"></div>
         </div>
       </div>
 
@@ -140,8 +138,8 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <div class="project-gallery-content">
 
           <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/code.jpeg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
+            <img loading="lazy" src="../assets/images/civic.png" class="gallery-image">
+            <span class="image-caption">MIT Civic Media Centre</span>
           </div>
           <div class="gallery-image-container half-width">
             <img loading="lazy" src="../assets/images/sketchbook.jpeg" class="gallery-image">
