--- a/projects/reprap.html
+++ b/projects/reprap.html
@@ -18,9 +18,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
   <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="stylesheet" href="../css/layout.css">
-  <link rel="stylesheet" href="../css/typography.css">
-  <link rel="stylesheet" href="../css/utilities.css">
+  <link rel="stylesheet" href="../css/merged.css">
 
   <script defer src="../js/script.js"></script>
 </head>
