updated footer and css styles

--- a/home/contact.html
+++ b/home/contact.html
@@ -118,19 +118,12 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <!-- PROJECT HEADER -->
     <div id="project-header">
 
-      <div class="main-title">Nanode</div>
-      <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It is a low cost platform for creative development of web connected ideas. Languages: C</div>
+      <div class="main-title">Contact</div>
+      <div class="body-text">
+        <p>Get in touch :)</p>
+      </div>
       <img loading="lazy" class="project-header-image" src="../assets/images/nanode.png">
       </div>
-
-
-      <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
-        <div class="project-details-content">
-          <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It connects to a range of wireless, wired and ethernet interfaces. It allows you to develop web based sensor and control systems - giving you web access to six analogue sensor lines and six digital I/O lines. It costs under £20 as an easy build it yourself kit. Nanode was designed with Hacking in mind. </div>
-        </div>
-      </div>
-
       <!-- IMAGE GALLERY -->
       <div id="project-gallery">
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
@@ -156,9 +149,15 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <!-- FOOTER -->
     <div id="footer">
 
-      <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
-      </a>
+<span class="copyleft">©</span>Samuel Carlisle
+
+<a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
+<img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
+</a>           
+
+<a rel="me" href="https://kolektiva.social/@"><img loading="lazy" src="../assets/icons/mastodon.png" class="footer-icon"></a>
+
+<a rel="me" href="https://delta.chat/en/"><img loading="lazy" src="../assets/icons/deltachat.png" class="footer-icon"></a>
     </div>
 
   </body>
