--- a/index.html
+++ b/index.html
@@ -381,10 +381,15 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
         </div>
       </div>
       <!-- FOOTER -->
-      <div id="footer"> <a rel="me" href="https://kolektiva.social/@samthetechie">
-          <img loading="lazy" src="./assets/icons/mastodon.svg" class="footer-icon">
-        </a> <a class="icon-link" href="mailto:samuelcarlisle@gmail.com"> <img
-            loading="lazy" src="./assets/icons/mail.svg" class="footer-icon"> </a>
+      <div id="footer"><span class="copyleft">©</span>Samuel Carlisle
+
+<a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
+<img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
+</a>           
+
+<a rel="me" href="https://kolektiva.social/@"><img loading="lazy" src="../assets/icons/mastodon.png" class="footer-icon"></a>
+
+<a rel="me" href="https://delta.chat/en/"><img loading="lazy" src="../assets/icons/deltachat.png" class="footer-icon"></a>
       </div>
     </div>
   </body>
