--- a/service/pcrepair.html
+++ b/service/pcrepair.html
@@ -172,9 +172,15 @@ Please note: while most software problems can be fixed remotely, service is fast
     <!-- FOOTER -->
     <div id="footer">
 
-      <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
-      </a>
+<span class="copyleft">©</span>Samuel Carlisle
+
+<a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
+<img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
+</a>           
+
+<a rel="me" href="https://kolektiva.social/@"><img loading="lazy" src="../assets/icons/mastodon.png" class="footer-icon"></a>
+
+<a rel="me" href="https://delta.chat/en/"><img loading="lazy" src="../assets/icons/deltachat.png" class="footer-icon"></a>
     </div>
 
   </body>
