updated the remaining footers

--- a/service/sustainability.html
+++ b/service/sustainability.html
@@ -169,9 +169,15 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
                 </div>
                 <!-- FOOTER -->
                 <div id="footer">
-                  <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-                    <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
-                  </a>
+<span class="copyleft">©</span>Samuel Carlisle
+
+<a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
+<img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
+</a>           
+
+<a rel="me" href="https://kolektiva.social/@"><img loading="lazy" src="../assets/icons/mastodon.png" class="footer-icon"></a>
+
+<a rel="me" href="https://delta.chat/en/"><img loading="lazy" src="../assets/icons/deltachat.png" class="footer-icon"></a>
                 </div>
               </body>
               </html>
