--- a/actions/cryptoparty.html
+++ b/actions/cryptoparty.html
@@ -158,9 +158,15 @@ Being a community organizer in the CryptoParty movement has been a fulfilling an
       </div>
       <!-- FOOTER -->
       <div id="footer">
-        <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-          <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
-        </a>
+<span class="copyleft">©</span>Samuel Carlisle
+
+<a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
+<img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
+</a>           
+
+<a rel="me" href="https://kolektiva.social/@"><img loading="lazy" src="../assets/icons/mastodon.png" class="footer-icon"></a>
+
+<a rel="me" href="https://delta.chat/en/"><img loading="lazy" src="../assets/icons/deltachat.png" class="footer-icon"></a>
       </div>
     </body>
     </html>
