added some screenshots and notes for web projects

--- a/index.html
+++ b/index.html
@@ -118,14 +118,21 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
               class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Colorful Psyche</div>
-              <div class="body-text project-card-text">Website Design for an artist</div>
+              <div class="body-text project-card-text">Artist Website. Service Tier: Advanced. Fully Customised. Custom HTML, JS, CSS & fully customised Wordpress.</div>
             </div>
           </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/manurosales.webp"
               class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">manurosales.com</div>
-              <div class="body-text project-card-text">Website Design for an artist.</div>
+              <div class="body-text project-card-text">Artist Website. Service Tier: Basic (Website Only). Old site migration from github pages (static html to gutenberg / block layout) into a new secure wordpress deployment. User training sessions. Goal: get up and running quickly and support user autonomy in managing the website moving forwards.</div>
+            </div>
+          </div>
+          <div class="project-card"> <img loading="lazy" src="./assets/images/sitinaturaleza.webp"
+              class="project-image">
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">sitinaturaleza.com</div>
+              <div class="body-text project-card-text">Artist Website. Service Tier: Intermediate (Website + E-commerce). Wordpress deployment.</div>
             </div>
           </div>
           <div class="project-card"> <img loading="lazy" src="./assets/images/wandelbuendnis.webp"
@@ -139,7 +146,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
               class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">menthormovement.com</div>
-              <div class="body-text project-card-text">IT and Web consulting for Menthormovement working closely with their team to rapidly deliver a fully customised e-commerce platform with bespoke frontend and backend tailored lovingly and precisely to the needs and wishes of the client.</div>
+              <div class="body-text project-card-text">Website for a progressive social entrepreneur. Service Tier: Advanced. Fully Customised. IT and Web consulting for Menthormovement working closely with their team to rapidly deliver a fully customised e-commerce platform with bespoke frontend and backend tailored lovingly and precisely to the needs and wishes of the client.</div>
             </div>
           </div> 
           <div class="project-card"> <img loading="lazy" src="./assets/images/dragon_dreaming.webp"
