added more info about frontline club talk

--- a/talks/frontline.html
+++ b/talks/frontline.html
@@ -127,7 +127,40 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <div id="project-details">
         <div class="subheader-text">Background</div>
         <div class="project-details-content">
-          <div class="body-text">More Info</div>
+          <div class="body-text">
+  <p><em>Talk March 13, 2012 – 7:00 PM</em></p>
+          <div style="position:relative;padding-top:56.25%;">
+          <iframe src="https://www.youtube.com/embed/-ZPnnpSB1xA" frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+        </div>
+  <p><strong>In association with BBC College of Journalism</strong></p>
+
+  <p>
+    Governments and security forces are becoming increasingly wise to the role of social media in organising and enhancing protest movements. As a result they are developing new ways to block, hack and track citizens’ tweets, Facebook and other social media tools in order to prevent unrest.
+  </p>
+
+  <p>
+    Protesters and citizen journalists the world over are able to stay one step ahead, however, with the help of open-source developed phone apps that allow them to communicate effectively without being tracked as easily. From letting friends know if you’ve been arrested to getting your story public, there is an app for all possible situations.
+  </p>
+
+  <p>
+    ObscuraCam, a collaborative project between Witness and technology-focused activists, has developed a camera app for Android phones. It allows the user to share video and images without it being tracked back to them through data embedded into the file, whilst detecting and obscuring faces. Protesters can now safely share information without fear of identification.
+  </p>
+
+  <p>
+    But will apps really protect protesters, and are they any safer than traditional social media? What do mobile apps mean for citizen journalism? Join us at the Frontline Club for a lively debate about the latest technology for protesters and citizen journalists and how far technology could go in making protest safer and smarter.
+  </p>
+
+  <p><strong>Chaired by:</strong> Rory Cellan-Jones, BBC’s technology correspondent and author of the blog dot.rory. (@BBCRoryCJ)</p>
+
+  <p><strong>With:</strong></p>
+  <ul>
+    <li><strong>Christian Payne</strong>, mobile media maker and professional blogger. He champions story making with mobile devices and explores new social media and its applications. He can also be found speaking internationally on technology and lecturing MA journalism students at Goldsmiths. (@documentally)</li>
+    <li><strong>Sam Carlisle</strong>, entrepreneur, hacker and developer of the Sukey mobile app that crowdsources information during demonstrations onto a map, allowing protesters to stay safe and one step ahead. (@samthetechie)</li>
+    <li><strong>Tom Barfield</strong>, site editor and community manager at Demotix, the crowdsourced photojournalism wire. He’s a linguist, sci‑fi and technology lover and something of a news junkie. (@tombarfield)</li>
+    <li><strong>Ryan Schlief</strong>, programme manager at Witness. An international nonprofit organisation that uses video and storytelling to inform the world of human rights abuses. They are also one half of the ObscuraCam collaboration. (@witnessryan)</li>
+  </ul>
+
+          </div>
         </div>
       </div>
 
