added a new poem: rite of redox

--- a/art/writing.html
+++ b/art/writing.html
@@ -123,6 +123,44 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
               </div>
 
               <div id="project-details">
+                <div class="subheader-text">Rite of Redox</div>
+                <div class="project-details-content">
+                  <div class="body-text">
+                  <pre>
+Passive pyrophytes wait—
+shielded, resilient,
+enduring the passing flame,
+surviving what scorches others.
+
+Active pyrophytes dance—
+bearing volatile oils,
+breathing fire into the world,
+calling forth the blaze that births them.
+
+Yet neither can open
+until the flame kisses their seed coats.
+
+Some wounds — and wombs —
+open only to fire.
+
+Others
+unfurl like song,
+and love seeps out
+from the tender seam
+of being seen.
+
+The sadness wasn’t the end.
+It was the ground.
+
+And even now,
+a branch moves toward the sky,
+anchored by roots daring deeper.
+                    </pre>
+                  </div>
+                </div>
+              </div>
+
+              <div id="project-details">
                 <div class="subheader-text">It's OK to feel ashamed</div>
                 <div class="project-details-content">
                   <div class="body-text">
