updated the text on the service cards, next review images!

--- a/index.html
+++ b/index.html
@@ -111,61 +111,53 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
         </div>
       </div>
       <!-- Project Cards / Sections -->
-            <div id="my-service-section">
-        <!-- Services Section --> <span class="subheader-text"><br><br>Services:<br><br></span>
+      <div id="my-service-section">
+        <!-- Services Section --> 
+        <span class="subheader-text"><br><br>Services:<br><br></span>
         <div class="projects-container">
-          <div class="project-card"> <img loading="lazy" src="./assets/images/code.jpg"
-              class="project-image">
+
+          <div class="project-card"> 
+            <img loading="lazy" src="./assets/images/prototyping.jpg" class="project-image">
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">Embedded Systems & IoT Prototyping</div>
+              <div class="body-text project-card-text">
+                Design and development of embedded software and hardware prototypes, including ARM Cortex-M, RISC-V, ESP32-S3/C5, RP2040, and nRF52/53 systems. Build secure, low-power, and resilient IoT solutions with OTA updates, real-time telemetry, and cloud connectivity.
+              </div>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img loading="lazy" src="./assets/images/code.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Technical Consulting & Strategy</div>
-              <div class="body-text project-card-text"> I help define technology goals and align solutions with your business needs, ensuring secure, scalable, resilient systems.  
-        From infrastructure planning to project roadmaps, I provide expert guidance to shape your technology for lasting impact.
-      </div>
-    </div>
-  </div>
-            <div class="project-card">
-    <img loading="lazy" src="./assets/images/fullstack.jpg" class="project-image">
-    <div class="project-card-text-container">
-      <div class="subheader-text project-title">Full-Stack Software Development</div>
-      <div class="body-text project-card-text">
-        Custom web and mobile applications built with maintainability and performance in mind.  
-        I handle frontend and backend development, creating seamless user experiences tailored to your requirements.
-      </div>
-    </div>
-  </div>
+              <div class="body-text project-card-text">
+                End-to-end guidance for embedded and IoT projects: hardware selection, board bring-up, firmware development, and cloud integration. Ensure scalable, secure, and field-ready systems for medical, industrial, and humanitarian deployments.
+              </div>
+            </div>
+          </div>
 
-  <div class="project-card">
-    <img loading="lazy" src="./assets/images/prototyping.jpg" class="project-image">
-    <div class="project-card-text-container">
-      <div class="subheader-text project-title">Embedded Systems & Prototyping</div>
-      <div class="body-text project-card-text">
-        Design and development of embedded software and hardware prototypes, including robotics and 3D printing.  
-        Integrating hardware and software components to deliver innovative, functional solutions.
-      </div>
-    </div>
-  </div>
+          <div class="project-card">
+            <a href="https://web.samtechie.org/" target="_blank">
+              <img loading="lazy" src="./assets/images/fullstack.jpg" class="project-image">
+            </a>
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">Web & App Development</div>
+              <div class="body-text project-card-text">
+                Custom web and mobile applications built for reliability, security, and scalability. Explore my full portfolio at <a href="https://web.samtechie.org/" target="_blank">web.samtechie.org</a>.
+              </div>
+            </div>
+          </div>
 
-  <div class="project-card">
-    <img loading="lazy" src="./assets/images/automation.jpg" class="project-image">
-    <div class="project-card-text-container">
-      <div class="subheader-text project-title">DevOps, Automation & Cloud</div>
-      <div class="body-text project-card-text">
-        Automate deployments, manage cloud infrastructure, and optimize system performance.  
-        I ensure your technology runs reliably and scales efficiently to meet evolving demands.
-      </div>
-    </div>
-  </div>
+          <div class="project-card">
+            <img loading="lazy" src="./assets/images/automation.jpg" class="project-image">
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">DevOps, Automation & Cloud</div>
+              <div class="body-text project-card-text">
+                Automate deployments, manage cloud infrastructure, and optimize performance for embedded, IoT, and web applications. Deliver reliable, secure, and scalable operations with Docker, Terraform, AWS, and GCP.
+              </div>
+            </div>
+          </div>
 
-  <div class="project-card">
-    <img loading="lazy" src="./assets/images/code.jpg" class="project-image">
-    <div class="project-card-text-container">
-      <div class="subheader-text project-title">Training, Support & Collaboration</div>
-      <div class="body-text project-card-text">
-        Customized training and ongoing technical support to empower your team.  
-        I foster collaboration and knowledge transfer to build autonomy and ensure long-term success.
-      </div>
-    </div>
-  </div>
         </div>
       </div>
       <div id="my-client-section"> <span class="subheader-text"><br><br>Recent Clients:<br><br></span>
