--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Web & App Development</div>
               <div class="body-text project-card-text">
-                Custom web and mobile applications built for reliability, security, and scalability. Explore my full portfolio at <a href="https://web.samtechie.org/" target="_blank">web.samtechie.org</a>.
+                Custom web and mobile applications built for reliability, security, and scalability. Explore my full portfolio at <a href="https://web.samthetechie.org/" target="_blank">web.samthetechie.org</a>.
               </div>
             </div>
           </div>
