updated bio and headline

--- a/index.html
+++ b/index.html
@@ -87,10 +87,13 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
       <div id="portfolio-header">
         <div id="portfolio-header-image-container"> <img loading="lazy" src="./assets/images/sam.webp" class="portfolio-header-image"> </div>
         <div id="portfolio-header-text-container">
-          <div class="header-text"> <span class="main-title">Hey, I'm Samuel Carlisle</span>
-            <div class="body-text">HoomanBean(w/ Voice), Engineer, Civic Media,
-              H4ck3r, Gardener</div>
+        <div class="header-text">
+          <h1 class="main-title">Hey, I'm Samuel Carlisle</h1>
+          <div class="body-text">
+            Embedded Systems & IoT Engineer | Secure, Resilient, Low-Power Systems | Hacker Ethos, Real-World Impact
           </div>
+        </div>
+
           <a class="button" href="#my-project-section">
             <span class="button-text">Check out the projects I have done</span>
             <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon">
@@ -105,11 +108,24 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
           </a>
           </div>
       </div>
-      <div id="about-section"> <span class="subheader-text">About Me</span>
+      <div id="about-section">
+        <span class="subheader-text">About Me</span>
         <div class="about-section-content">
-          <div class="body-text">I speak English, French and German. I am a well seasoned technologist who establishes technical infrastructure and fosters social patterns that enable collaboration, participation, and innovation. As a co-founder of Sukey, I helped create a platform to keep demonstrators safe, mobile and informed. Additionally, I've been involved with other initiatives like UCLOccupation, OccupyLSX tech, CryptopartyLondon, Hurricane Hackers, Open Source Ecology. I have also had the experience of living in an Eco Village for 5 years. My background includes both working in industry and also participating in local Hackspace communities around the world. Really living and embracing hacker culture, I repair and modify my devices and my stuff as well as assisting others to become more empowered through this approach. I hold a BEng with honors from Durham University and am a member of the Institution of Engineering and Technology (IET). Overall, my work focuses on creating transformative solutions using open source hardware and software and civic media tools. At some times this looks like 3D printers and at others like apps designed for direct action - all the while facillitating positive change through (global) collaborative efforts.</div>
+          <div class="body-text">
+            I am an Embedded Systems Engineer and IoT Specialist with 20+ years of experience designing resilient, low-power, and secure digital systems. 
+            My work spans medical devices, humanitarian technology, industrial IoT, renewable energy, and conservation, where reliability in extreme environments is critical. 
+
+            I started in the hacker scene and open-source communities, co-founding Sukey to keep demonstrators safe and informed, contributing to initiatives like CryptopartyLondon and Open Source Ecology, and building civic media tools that empowered people to subvert the tools of alienation / empower themselves through their technology.That ethos of open, resilient, user-driven systems continues to drive my professional work today. 
+
+            I bridge hardware, firmware, and cloud: from board bring-up and RTOS firmware on ARM Cortex-M and RISC-V MCUs, to embedded Linux integration, wireless connectivity, and device-to-cloud architectures. 
+            I deliver systems that scale securely, update reliably, and stay online under pressure—whether in remote clinics, industrial sites, or field deployments with minimal infrastructure. 
+
+            I hold a BEng with honors from Durham University and am a Member of the Institution of Engineering and Technology (MIET). 
+            I speak English, French, and German, and continue to thrive at the intersection of hacker culture and professional engineering: solving hard problems, mentoring teams, and building embedded systems with measurable real-world impact.
+          </div>
         </div>
       </div>
+
       <!-- Project Cards / Sections -->
       <div id="my-service-section">
         <!-- Services Section --> 
