updated all bio texts, headlines, keywords and description

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
                      _   _          _            _     _                                               | | | |        | |          | |   (_)                          
  ___  __ _ _ __ ___ | |_| |__   ___| |_ ___  ___| |__  _  ___   / __|/ _` | '_ ` _ \| __| '_ \ / _ \ __/ _ \/ __| '_ \| |/ _ \ 
 \__ \ (_| | | | | | | |_| | | |  __/ ||  __/ (__| | | | |  __/|___/\__,_|_| |_| |_|\__|_| |_|\___|\__\___|\___|_| |_|_|\___|
-HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener-->
+Embedded Systems & IoT Engineer | Secure, Resilient, Low-Power Systems | Hacker Ethos, Real-World Impact-->
 <!DOCTYPE html><html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="icon" href="./assets/icons/favicon.ico">
     <title>Samuel Carlisle BEng (hons) Dunelm MIET</title>
-    <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and a selection of my readings and writings.">
-    <meta name="keywords" content="engineer, security, cryptography, activism, poetry, speaker, change maker, paradigm shifter, consulting, hacking, programming, webdesign, pc repair, permaculture, making, art, make">
+  <meta name="description" content="Embedded Systems and IoT Engineer with 20+ years of experience designing secure, resilient, low-power digital systems. Expertise across medical, humanitarian, industrial IoT, renewable energy, and conservation sectors. Bridging hardware, firmware, and cloud with a hacker ethos and real-world impact.">
+    <meta name="keywords" content="embedded systems, IoT, engineer, firmware, hardware, ARM Cortex-M, RISC-V, ESP32, RP2040, nRF52, embedded linux, RTOS, secure systems, resilient systems, low-power design, device-to-cloud, wireless connectivity, BLE, LoRa, Zigbee, HF radio, cloud integration, AWS, GCP, Docker, Terraform, hacker ethos, open source, civic technology">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/merged.css">
     <script defer="defer" src="./js/script.js"></script>
