added 4 new graphics and tweaked css

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Embedded Systems & IoT Engineer | Secure, Resilient, Low-Power Systems | Hacker 
         <div class="projects-container">
 
           <div class="project-card"> 
-            <img loading="lazy" src="./assets/images/prototyping.jpg" class="project-image">
+            <img loading="lazy" src="./assets/images/embedded_iot_prototyping.webp" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Embedded Systems & IoT Prototyping</div>
               <div class="body-text project-card-text">
@@ -146,7 +146,7 @@ Embedded Systems & IoT Engineer | Secure, Resilient, Low-Power Systems | Hacker 
           </div>
 
           <div class="project-card">
-            <img loading="lazy" src="./assets/images/code.jpg" class="project-image">
+            <img loading="lazy" src="./assets/images/consulting_strategy.webp" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Technical Consulting & Strategy</div>
               <div class="body-text project-card-text">
@@ -157,7 +157,7 @@ Embedded Systems & IoT Engineer | Secure, Resilient, Low-Power Systems | Hacker 
 
           <div class="project-card">
             <a href="https://web.samtechie.org/" target="_blank">
-              <img loading="lazy" src="./assets/images/fullstack.jpg" class="project-image">
+              <img loading="lazy" src="./assets/images/web_app_development.webp" class="project-image">
             </a>
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Web & App Development</div>
@@ -168,7 +168,7 @@ Embedded Systems & IoT Engineer | Secure, Resilient, Low-Power Systems | Hacker 
           </div>
 
           <div class="project-card">
-            <img loading="lazy" src="./assets/images/automation.jpg" class="project-image">
+            <img loading="lazy" src="./assets/images/devops_automation_cloud.webp" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">DevOps, Automation & Cloud</div>
               <div class="body-text project-card-text">
