fixed typo in href

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ Embedded Systems & IoT Engineer | Secure, Resilient, Low-Power Systems | Hacker 
           </div>
 
           <div class="project-card">
-            <a href="https://web.samtechie.org/" target="_blank">
+            <a href="https://web.samthetechie.org/" target="_blank">
               <img loading="lazy" src="./assets/images/web_app_development.webp" class="project-image">
             </a>
             <div class="project-card-text-container">
